--- a/css/main.css
+++ b/css/main.css
@@ -22,11 +22,26 @@ h1,
 h2,
 h3,
 h4,
-h5,
-h6 {
+h5{
     color: #eaeaea;
     line-height: 1.35;
     letter-spacing: .5;
+}
+
+h5 {
+    font-weight: 400;
+}
+
+h6 {
+    color: #9a9496;
+    margin: 0 0 4rem;
+    /* font-weight: 500; */
+}
+
+@media (max-width: 675px) {
+    h6 {
+        font-size: .85rem;;
+    }
 }
 
 h1 {
@@ -66,7 +81,7 @@ a {
 }
 
 a:hover {
-    color: #FCB836; 
+    color: #FCB836;
 }
 
 /* .nav-link {
@@ -94,6 +109,10 @@ a:hover {
     .container-xxl {
         padding: 3% 4%;
     }
+}
+
+.align-left {
+    text-align: left;
 }
 
 #hero {}
@@ -266,7 +285,7 @@ a:hover {
 }
 
 .img-features {
-    width: 80%;
+    width: 72%;
     transition: transform .3s ease-in-out;
 }
 
@@ -284,13 +303,13 @@ a:hover {
 
 @media (max-width: 990px) {
     .img-features {
-        width: 64%;
+        width: 50%;
     }
 }
 
 @media (max-width: 650px) {
     .img-features {
-        width: 80%;
+        width: 64%;
     }
 }
 
@@ -325,7 +344,7 @@ a:hover {
 
 #integrations {
     background-color: rgb(34, 30, 28, .3);
-    padding: 2rem 0 7rem;
+    padding: 3rem 0 8rem;
     overflow: hidden;
     max-width: 100vw;
     position: relative;
@@ -373,7 +392,7 @@ a:hover {
     position: absolute;
 }
 
-  .int-images-lg-2 {
+.int-images-lg-2 {
     text-align: center;
     transform: translateX(-1350px);
     animation: move 50s linear 50s infinite;
@@ -443,30 +462,140 @@ a:hover {
 
 @-webkit-keyframes move {
     from {
-      transform: translateX(-650px);
+        transform: translateX(-650px);
     }
-    to {
-      transform: translateX(1675px);
-    }
-  }
 
-  @media (max-width: 490px) {
+    to {
+        transform: translateX(1675px);
+    }
+}
+
+@media (max-width: 490px) {
     @-webkit-keyframes move {
         from {
-          transform: translateX(-350px);
+            transform: translateX(-350px);
         }
+
         to {
-          transform: translateX(1350px);
+            transform: translateX(1350px);
         }
-      }
-  }
+    }
+}
 
-  /* End Integration Animation */
+/* End Integration Animation */
 
 
-#discover {}
+#discover {
+    padding-top: 3rem;
+}
 
-#cta {}
+@media (max-width: 990px) {
+    #discover {
+        padding: 4rem 0 0;
+    }
+}
+
+.disc-h2 {
+    margin-bottom: 3rem;
+}
+
+/* @media (max-width: 675px) {
+    .disc-h2 {
+        font-size: 1.75rem;
+        margin-bottom: 1rem;
+    }
+} */
+
+.stud-content,
+.prof-content,
+.pers-content {
+    display: none;
+}
+
+input[type='radio'] {
+    width: 0;
+    height: 0;
+    opacity: 0;
+}
+
+label {
+    cursor: pointer;
+    background-color: transparent;
+    /* border-style: none none solid none;
+    border-width: 1px;
+    border-color: transparent; */
+    transition: .15s ease-in-out;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #eaeaea;
+    margin: 0 8rem 6rem;
+}
+
+label:hover {
+    color: #9a9496;
+    transition: .15s ease-in-out;
+}
+
+@media (max-width: 1400px) {
+    label {
+        font-size: 1.5rem;
+        margin: 0 4rem 6rem;
+    }
+}
+
+@media (max-width: 990px) {
+    label {
+        font-size: 1.5rem;
+        margin: 0 2rem 2rem;
+    }
+}
+
+@media (max-width: 675px) {
+    label {
+        font-size: .85rem;
+        margin: 1rem .5rem;
+    }
+}
+
+#disc-stud:checked+label,
+#disc-prof:checked+label,
+#disc-pers:checked+label {
+    /* border-color: #FCB836; */
+    color: #FCB836;
+    transform: scale(1.1);
+}
+
+#disc-stud:checked~.stud-content,
+#disc-prof:checked~.prof-content,
+#disc-pers:checked~.pers-content {
+    display: block;
+}
+
+.disc-txt-col-left {
+    padding-right: 4rem;
+}
+
+.disc-imgs {
+    width: 32rem;
+    padding: 0 4rem 3rem;
+    text-align: center;
+}
+
+@media (max-width: 1180px) {
+    .disc-imgs {
+        width: 24rem;
+    }
+}
+
+@media (max-width: 675px) {
+    .disc-imgs {
+        width: 20rem;
+    }
+}
+
+#cta {
+    margin-top: 2rem;
+}
 
 @media (max-width:990px) {
     #cta {
@@ -487,6 +616,7 @@ a:hover {
     from {
         transform: scale(1);
     }
+
     to {
         transform: scale(1.15);
     }
@@ -518,8 +648,8 @@ a:hover {
 
 .social-icon {
     margin: 0 16px;
-    color:rgb(154, 148, 150, .5);
-    transition: .2s ease-in-out;
+    color: rgb(154, 148, 150, .5);
+    transition: .15s ease-in-out;
 }
 
 .social-icon:hover {
@@ -542,7 +672,7 @@ a:hover {
 
 .copyright {
     margin-top: 2rem;
-    color:rgb(154, 148, 150, .75);
+    color: rgb(154, 148, 150, .75);
     font-size: 1rem;
     font-weight: 300;
 }
